# self-service

./: .gitignore  README.md  et --hard HEAD@{2}  package-lock.json  start-dev.sh
backend/: UserTable.sql  courses.sql  create_accounts.sql  db.py  main.py  pyproject.toml  waitlist.py
backend/blueprints/: user_courses.py
backend/routes/: Finances.py  all_courses.py  auth.py  cart.py  coursedrop.py  filter_support.py  finances.py  registeredcourses.py  unofficial_transcript.JSON  unofficial_transcript.py  user_courses.py
backend/sql/: 2526_courses.sql  README.md  bulk_import_current_self_service.py  course_data_offerings_relationship.sql  course_offerings.sql  coursetable.sql  create_accounts.sql  create_sandbox_user.sql  import_data.sh  joinexample.txt  registered_course.sql
backend/sql/rawdata/: 2526_courses.sql  create_accounts.sql  insert_all_data.sql  insert_financial_data.sql
backend/sql/tables/: UserTable.sql  academic_programs.sql  cart_save.sql  course_data_offerings_relationship.sql  course_offerings.sql  courses_data.sql  create_all_tables.sql  finance_data.sql  registered_table.sql  student_data.sql  student_study_field.sql  users_data  users_data.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddCoursePopup.tsx  AddIndividualCourseTemplate.tsx  Cart.css  CartContext.tsx  CartCourseTemplate.css  CartCourseTemplate.tsx  CartTemplate.css  CartTemplate.tsx  CoursePageTemplate.tsx  FilterUI.css  FilterUI.tsx  IndivdualCoursePage.css  IndividualClassCard.tsx  LoginID.tsx  (+9 more)
(+45 files in other folders)
