[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "mariadb>=1.1.14",
]

[tool.setuptools.packages.find]
exclude = ["sql*"]
